# sqlite-burrito

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py
.ci/: pr.py
.github/actions/conan-setup/: action.yml
.github/workflows/: build.yml  pr.yml  release.yml
cmake/: Config.cmake.in  GenerateIsolationFiles.cmake  config.h.in  install_helper.cmake  package_helper.cmake  version.h.in
example/: CMakeLists.txt
example/errors/: CMakeLists.txt  main.cpp
example/exceptions/: CMakeLists.txt  main.cpp
include/sqlite-burrito/: bind_parameters.h  column.h  connection.h  library.h  mutex.h  statement.h  transaction.h  versioned_database.h
include/sqlite-burrito/detail/: connection_ptr.h  iterator.h  mutex_ptr.h  statement_ptr.h
include/sqlite-burrito/errors/: sqlite.h
src/: bind_parameters.cpp  connection.cpp  library.cpp  mutex.cpp  statement.cpp  transaction.cpp  versioned_database.cpp
src/errors/: sqlite.cpp
test/: CMakeLists.txt  main.cpp
test/src/: bind_parameters.cpp  connection.cpp  empty_arrays.cpp  main.cpp  statement.cpp  transaction.cpp  versioned_database.cpp
test/src/errors/: sqlite.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  test_package.cpp
tools/: README.md  generate-isolation-files.py
